--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "cross-env DEBUG=notes:* node ./app.mjs",
+    "start": "cross-env REQUEST_LOG_FILE=log.txt REQUEST_LOG_FORMAT=common DEBUG=notes:* node ./app.mjs",
     "server1": "cross-env DEBUG=notes:* PORT=3001 node ./app.mjs",
     "server2": "cross-env DEBUG=notes:* PORT=3002 node ./app.mjs",
     "dl-minty": "mkdir -p minty && npm run dl-minty-css && npm run dl-minty-min-css",
@@ -22,6 +22,7 @@
     "http-errors": "^1.7.3",
     "jquery": "^3.5.x",
     "morgan": "^1.9.1",
-    "popper.js": "^1.16.x"
+    "popper.js": "^1.16.x",
+    "rotating-file-stream": "^2.1.3"
   }
 }
